# neuqrm_sim

./: .gitignore  .ycm_extra_conf.py  README.md
src/gazebo/launch/: husky_demo.launch  turtlebot_world.launch
src/gazebo/world/: omni3.world  turtlebot
src/gazebo/world/big_maze/: model.config  model.sdf
src/gazebo/world/maze/: model.config  model.sdf
src/gazebo/world/maze_new/: model.config  model.sdf
src/gazebo/world/wall/: model.config  model.sdf
src/key_teleop/scripts/: key_teleop.py
src/mouse_teleop/launch/: mouse_teleop.launch
src/multi_agent/: CMakeLists.txt  package.xml
src/multi_agent/include/multi_agent/: misc.h  neuq_controller.h  path_tracking.h  pose_se2.h
src/multi_agent/launch/: single_test.launch
src/multi_agent/map/: big_maze.pgm  big_maze.yaml  box.pgm  box.yaml  husky_palyground.yaml
src/multi_agent/msg/: data.msg  group_global_goal.msg
src/multi_agent/param/: amcl.launch.xml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/multi_agent/src/: FormationControl_pub.cpp  FormationControl_sub.cpp  global_formation_publisher.cpp  neuq_controller.cpp  path_tracking.cpp
src/omni_sim/omni_description/urdf/: cheng.urdf.xacro
src/omni_sim/omni_gazebo/launch/: omni_world.launch
src/omni_sim/omni_gazebo/worlds/: box.world  clearpath_playpen.1.world  clearpath_playpen.world  empty1.world
src/omni_sim/omni_slam/rviz/: mapping.rviz
src/rf2o_laser_odometry/src/: odom.cpp
src/sim_1/: CMakeLists.txt  package.xml
src/sim_1/cfg/: amcl.launch  move_base.xml  rf2o.launch.xml  robot_localization.yaml  rviz_navigation.rviz
src/sim_1/launch/: sim1.launch
src/stage/launch/: multi-agent.launch  neuq_practice_space.launch
